--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,38 @@
-# Compiled class file
+# java
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
 *.jar
 *.war
 *.ear
-*.zip
-*.tar.gz
-*.rar
+
+# eclipse
+.classpath
+.project
+.settings/*
+bin/*
+
+# inteliJ IDEA
+.idea
+
+# gradle
+.gradle
+!gradle-wrapper.jar
+build/*
+!build/build.xml
+
+# maven
+target/
+
+# others
+*.log
+*.swp
+*.bak
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/build/
+/bin/
