--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'commons-codec:commons-codec:1.10'
     testCompile 'junit:junit:4.12'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile 'com.github.stefanbirkner:system-rules:1.16.0'
 }
 
 task wrapper(type: Wrapper) {
