--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,28 @@
-// kotlin
+// kotlin and bintary
 buildscript {
-    ext.kotlin_version = '1.1.2-2'
+    ext.kotlin_version = '1.1.2-2' // kotlin
     repositories {
-        mavenCentral()
+        mavenCentral() // kotlin
+        jcenter() // bintary
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" //kotlin
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3" // bintary
     }
 }
 apply plugin: 'kotlin'
+apply plugin: "com.jfrog.bintray"
+
 apply plugin: 'application'
 apply plugin: 'jacoco'
+apply plugin: "maven-publish"
 
 mainClassName = 'com.keidrun.qstackoverflow.app.AppKt'
 
 defaultTasks 'run'
 
 group "com.keidrun.qstackoverflow"
-version = "0.0.1"
+//version = "0.0.1"  //gradle -Pversion=0.0.1 bintrayUpload
 def tag = "v${project.version}"
 def productName = 'Stack Overflow\'s Search CLI'
 description = "${project.name} build of the version ${project.version}"
@@ -59,6 +64,15 @@ jar {
     }
     from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 }
+task sourceJar(type: Jar) {
+    classifier "sources"
+    from sourceSets.main.allJava
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier "javadoc"
+    from javadoc.destinationDir
+}
+jar.dependsOn sourceJar, javadocJar
 
 // coverage
 jacoco {
@@ -75,5 +89,81 @@ task codeCoverageReport(type: JacocoReport, dependsOn: 'test') {
         xml.destination "${buildDir}/reports/jacoco/report.xml"
         html.enabled = false
         csv.enabled = false
+    }
+}
+
+// publish
+publishing {
+    publications {
+        mod(MavenPublication) {
+            from components.java
+
+            artifact sourceJar
+            artifact javadocJar
+
+            pom.withXml { xml ->
+                final thisPom = {
+                    packaging "jar"
+                    name "$productName"
+                    url "https://github.com/keidrun/l2l-BatchToBash-plugin"
+                    description "${project.description}"
+                    licenses {
+                        license {
+                            name "MIT License"
+                            url "https://opensource.org/licenses/MIT"
+                            distribution "repo"
+                        }
+                    }
+                    scm {
+                        url "https://github.com/keidrun/l2l-BatchToBash-plugin"
+                        connection "https://github.com/keidrun/l2l-BatchToBash-plugin"
+                    }
+                    developers {
+                        developer {
+                            id "keidrun"
+                            name "Keid"
+                            email "kssk96@gmail.com"
+                        }
+                    }
+                }
+                thisPom.resolveStrategy = Closure.DELEGATE_FIRST
+                xml.asNode().children().last() + thisPom
+            }
+        }
+    }
+
+    repositories {
+        maven {
+            name "local"
+            url "$buildDir/repositories/repo"
+        }
+    }
+}
+
+// upload by bintray
+bintray {
+    user = project.hasProperty("bintrayUser") ? bintrayUser : ""
+    key = project.hasProperty("bintrayKey") ? bintrayKey : ""
+    publications = ["mod"]
+    publish = true
+    pkg {
+        repo = "qstackoverflow"
+        name = "qstackoverflow"
+        websiteUrl = "https://github.com/keidrun/qstackoverflow"
+        issueTrackerUrl = "https://github.com/keidrun/qstackoverflow/issues"
+        vcsUrl = "https://github.com/keidrun/qstackoverflow.git"
+        licenses = ["MIT"]
+        labels = ["stackoverflow", "stackexchange"]
+        publicDownloadNumbers = true
+
+        version {
+            name = tag
+            desc = "Release version ${project.version}"
+            released = new Date()
+            vcsTag = tag
+            gpg {
+                sign = true
+            }
+        }
     }
 }
